# rtic

examples/esp32c6/: Cargo.toml
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/examples/: sw_and_hw.rs
rtic/: Cargo.toml  build.rs
rtic-macros/: Cargo.toml
rtic-macros/src/: lib.rs
rtic-macros/src/codegen/bindings/: esp32c6.rs
rtic-macros/src/syntax/: backend.rs
rtic-monotonics/: Cargo.toml
rtic-monotonics/src/: esp32c6.rs  lib.rs
rtic/src/export/: riscv_esp32c6.rs
