[package]
name = "esp32-c6"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
rtic = { path = "../../rtic/" }
rtic-monotonics = {path = "../../rtic-monotonics/"}
esp-hal = { version = "0.20.1", features = ["esp32c6"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp32c6 = {version = "0.17.0", features = ["critical-section"]}
esp-println = { version = "0.11.0", features = ["esp32c6"] }

[features]
test-critical-section = []
riscv-esp32c6-backend = ["rtic/riscv-esp32c6-backend", "rtic-monotonics/esp32c6-systimer"]
